# nic

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml  setup.py
.github/: release.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
scripts/: install.sh  nic
src/nic/: cli.py
tests/: test_cli.py
