[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nic-cli"
version = "0.1.0"
description = "A clean, readable cross-platform network interface CLI for macOS, Linux, and Windows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "kidder1", email = "89340217+Kidder1@users.noreply.github.com" }
]
urls = { Homepage = "https://github.com/Kidder1/nic", Repository = "https://github.com/Kidder1/nic" }
keywords = ["network", "interfaces", "cli", "macos", "linux", "windows", "ethernet", "wifi"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Networking",
  "Topic :: Utilities"
]

[project.scripts]
nic = "nic.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
